[metadata]
# replace with your username:
name = load_test
version = 0.0.1
author = Dor Meiri
author_email = dormeiri@gmail.com
description = Abstraction for load testing
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/dormeiri/load-test
project_urls =
    Bug Tracker = https://github.com/pypa/sampleproject/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = load_test
packages = find:
python_requires = >=3.6

[options.packages.find]
where = load_test